Mappings can now be made in any declaration, whether it has an assignment or not. Previous a procedure call assignment and a mapping could not be made in the same statement. XML-format distinction between a 'dataset' and a 'variable' is now gone.
git-svn-id: https://svn.ci.uchicago.edu/svn/vdl2/trunk@2518 e2bb083e-7f23-0410-b3a8-8253ac9ef6d8

--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -1,3 +1,8 @@
+(02/09/09)
+*** Mappings can now be made in any declaration, whether it has an assignment
+    or not. Previous a procedure call assignment and a mapping could not be
+    made in the same statement.
+
 (02/05/09)
 *** TIghter type checking on app blocks. Primitive types and arrays of
     primitive types are permitted. Other types are prohibited.
