--- a/tests/language/working-base/062-stdinerrout.xml
+++ b/tests/language/working-base/062-stdinerrout.xml
@@ -34,15 +34,9 @@
           <variableReference>e</variableReference></function></stderr><stringConstant>hello</stringConstant>  </application>
     </binding>
   </procedure>
-  <dataset name="infile" type="messagefile">
-    <file name="test.in"/>
-  </dataset>
-  <dataset name="outfile" type="messagefile">
-    <file name="test.out"/>
-  </dataset>
-  <dataset name="errfile" type="messagefile">
-    <file name="test.err"/>
-  </dataset>
+  <variable name="infile" type="messagefile"><file name="test.in"/></variable>
+  <variable name="outfile" type="messagefile"><file name="test.out"/></variable>
+  <variable name="errfile" type="messagefile"><file name="test.err"/></variable>
   <call proc="greeting" src="line 13">
     <output><variableReference>errfile</variableReference></output>
     <output><variableReference>outfile</variableReference></output>
