--- a/tests/language/working-base/diamond.xml
+++ b/tests/language/working-base/diamond.xml
@@ -122,9 +122,7 @@
       <input><variableReference>fc</variableReference></input>
     </call>
   </procedure>
-  <dataset name="final" type="file">
-    <file name="FINAL"/>
-  </dataset>
+  <variable name="final" type="file"><file name="FINAL"/></variable>
   <call proc="diamond" src="line 33">
     <output><variableReference>final</variableReference></output>
     <input><floatConstant>1.0</floatConstant></input>
