--- a/tests/language/working-base/q12.xml
+++ b/tests/language/working-base/q12.xml
@@ -27,12 +27,8 @@
           <variableReference>t</variableReference></function></stdout><variableReference>s</variableReference>  </application>
     </binding>
   </procedure>
-  <dataset name="english" type="messagefile">
-    <file name="english.txt"/>
-  </dataset>
-  <dataset name="french" type="messagefile">
-    <file name="francais.txt"/>
-  </dataset>
+  <variable name="english" type="messagefile"><file name="english.txt"/></variable>
+  <variable name="french" type="messagefile"><file name="francais.txt"/></variable>
   <call proc="greeting" src="line 11">
     <output><variableReference>english</variableReference></output>
     <input><stringConstant>hello</stringConstant></input>
@@ -41,9 +37,7 @@
     <output><variableReference>french</variableReference></output>
     <input><stringConstant>bonjour</stringConstant></input>
   </call>
-  <dataset name="japanese" type="messagefile">
-    <file name="nihongo.txt"/>
-  </dataset>
+  <variable name="japanese" type="messagefile"><file name="nihongo.txt"/></variable>
   <call proc="greeting" src="line 15">
     <output><variableReference>japanese</variableReference></output>
     <input><stringConstant>konnichiwa</stringConstant></input>
