--- a/tests/language/working-base/q13.xml
+++ b/tests/language/working-base/q13.xml
@@ -51,12 +51,8 @@
           <variableReference>f</variableReference></function>  </application>
     </binding>
   </procedure>
-  <dataset name="outfile" type="messagefile">
-    <file name="q13greeting.txt"/>
-  </dataset>
-  <dataset name="c" type="countfile">
-    <file name="count.txt"/>
-  </dataset>
+  <variable name="outfile" type="messagefile"><file name="q13greeting.txt"/></variable>
+  <variable name="c" type="countfile"><file name="count.txt"/></variable>
   <call proc="greeting" src="line 19">
     <output><variableReference>outfile</variableReference></output>
     <input><stringConstant>hello from Swift</stringConstant></input>
