--- a/tests/language/working-base/q17.xml
+++ b/tests/language/working-base/q17.xml
@@ -38,21 +38,21 @@
    <variableReference>inputNames</variableReference>
    <stringConstant>one.txt two.txt three.txt</stringConstant>
   </assign>
-  <dataset name="inputfiles" type="messagefile[]">
+  <variable name="inputfiles" type="messagefile[]">
     <mapping descriptor="array_mapper">
       <param name="files"><variableReference>inputNames</variableReference></param>
     </mapping>
-  </dataset>
+  </variable>
   <foreach var="f"  src="line 15">
   <in><variableReference>inputfiles</variableReference></in>
-  <body><dataset name="c" type="countfile">
+  <body><variable name="c" type="countfile">
       <mapping descriptor="regexp_mapper">
         <param name="source"><function name="filename">
           <variableReference>f</variableReference></function></param>
         <param name="match"><stringConstant>(.*)txt</stringConstant></param>
         <param name="transform"><stringConstant>\1count</stringConstant></param>
       </mapping>
-    </dataset>
+    </variable>
     <call proc="countwords" src="line 17">
       <output><variableReference>c</variableReference></output>
       <input><variableReference>f</variableReference></input>
