--- a/tests/language/working-base/q23.xml
+++ b/tests/language/working-base/q23.xml
@@ -27,9 +27,7 @@
           <variableReference>t</variableReference></function></stdout><variableReference>s</variableReference>  </application>
     </binding>
   </procedure>
-  <dataset name="outfile" type="messagefile">
-    <file name="q23.txt"/>
-  </dataset>
+  <variable name="outfile" type="messagefile"><file name="q23.txt"/></variable>
   <variable name="message" type="string" xsi:nil="true"/>
   <assign src="line 13">
    <variableReference>message</variableReference>
