--- a/tests/language/working-base/q5.xml
+++ b/tests/language/working-base/q5.xml
@@ -36,9 +36,7 @@
         </arraySubscript>  </application>
     </binding>
   </procedure>
-  <dataset name="outfile" type="messagefile">
-    <file name="q5out.txt"/>
-  </dataset>
+  <variable name="outfile" type="messagefile"><file name="q5out.txt"/></variable>
   <variable name="words" type="string[]" xsi:nil="true"/>
   <assign src="line 13">
    <variableReference>words</variableReference>
