Recompilation will happen if a .kml file was compiled with a different version of Swift to the version being invoked. This is in addition to the existing behaviour where a .swift file will be recompiled if it is newer than the corresponding .kml file.
git-svn-id: https://svn.ci.uchicago.edu/svn/vdl2/trunk@2583 e2bb083e-7f23-0410-b3a8-8253ac9ef6d8

--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -1,3 +1,9 @@
+(02/09/22)
+*** Recompilation will happen if a .kml file was compiled with a different
+    version of Swift to the version being invoked. This is in addition to the
+    existing behaviour where a .swift file will be recompiled if it is newer
+    than the corresponding .kml file.
+
 (02/09/17)
 *** There is a new command swift-osg-ress-site-catalog which will generate
     a site catalog based on data gathered from OSG's ReSS information
