Additional tests for the lexer (based on information from EMMA coverage test)
git-svn-id: https://svn.ci.uchicago.edu/svn/vdl2/trunk@2595 e2bb083e-7f23-0410-b3a8-8253ac9ef6d8

--- a/tests/language/working-base/struct1.xml
+++ b/tests/language/working-base/struct1.xml
@@ -24,6 +24,56 @@
      					<membertype>int</membertype>
      				</member>
      		</typestructure>
+     	</type>
+     	<type>
+     		<typename>bar</typename>
+     		<typealias></typealias>
+     		<typestructure>
+     			    <member>
+     					<membername>a</membername>
+     					<membertype>int</membertype>
+     				</member>
+     			    <member>
+     					<membername>b</membername>
+     					<membertype>int[]</membertype>
+     				</member>
+     			    <member>
+     					<membername>c</membername>
+     					<membertype>int</membertype>
+     				</member>
+     			    <member>
+     					<membername>d</membername>
+     					<membertype>int[]</membertype>
+     				</member>
+     			    <member>
+     					<membername>e</membername>
+     					<membertype>int</membertype>
+     				</member>
+     			    <member>
+     					<membername>f</membername>
+     					<membertype>int</membertype>
+     				</member>
+     			    <member>
+     					<membername>g</membername>
+     					<membertype>int[]</membertype>
+     				</member>
+     			    <member>
+     					<membername>h</membername>
+     					<membertype>int</membertype>
+     				</member>
+     			    <member>
+     					<membername>i</membername>
+     					<membertype>int[]</membertype>
+     				</member>
+     			    <member>
+     					<membername>j</membername>
+     					<membertype>int</membertype>
+     				</member>
+     			    <member>
+     					<membername>k</membername>
+     					<membertype>int</membertype>
+     				</member>
+     		</typestructure>
      	</type>   
   </types>  
 </program>
