Provide a configuration option wrapper.invocation.mode, specifiable either globally in the configuration file or per-site as a profile key, that configures whether wrapper script invocations are made with an absolute path (as was the behaviour in Swift 0.8) or with a relative path (as was behaviour in previous versions of Swift).
git-svn-id: https://svn.ci.uchicago.edu/svn/vdl2/trunk@2597 e2bb083e-7f23-0410-b3a8-8253ac9ef6d8

--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -1,3 +1,10 @@
+(02/09/24)
+*** New configuration option wrapper.invocation.mode, specifiable either
+    globally in the configuration file or per-site as a profile key,
+    that configures whether wrapper script invocations are made with an
+    absolute path (as was the behaviour in Swift 0.8) or with a relative
+    path (as was behaviour in previous versions of Swift).
+
 (02/09/22)
 *** Recompilation will happen if a .kml file was compiled with a different
     version of Swift to the version being invoked. This is in addition to the
