limit number of concurrent iterations in foreach
git-svn-id: https://svn.ci.uchicago.edu/svn/vdl2/trunk@2665 e2bb083e-7f23-0410-b3a8-8253ac9ef6d8

--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -1,3 +1,9 @@
+(03/09/09)
+*** Added a throttling parallelFor and changed the swift foreach underlying
+    implementation to it. The throttling parallelFor limits the number of
+    concurrent iterations allowed, which should allow swift to scale better
+    in certain cases.
+
 (02/09/24)
 *** New configuration option wrapper.invocation.mode, specifiable either
     globally in the configuration file or per-site as a profile key,
