refactored and added condor provider
git-svn-id: https://svn.code.sf.net/p/cogkit/svn/trunk/current/src@2327 5b74d2a0-fa0e-0410-85ed-ffba77ec0bde

--- a/cog/modules/provider-localscheduler/CHANGES.txt
+++ b/cog/modules/provider-localscheduler/CHANGES.txt
@@ -1,3 +1,9 @@
+(03/13/09)
+
+*** Refactored common portions of providers into abstract parts
+
+*** Added condor provider
+
 (04/24/08)
 
 *** Added job canceling to PBS
