CHANGES for log-processing merge
git-svn-id: https://svn.ci.uchicago.edu/svn/vdl2/trunk@2684 e2bb083e-7f23-0410-b3a8-8253ac9ef6d8

--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -1,3 +1,8 @@
+(03/15/09)
+*** The log-processing code, primarily exposed as the swift-plot-log command,
+    has been merged into the main Swift release, rather than being a separate
+    download.
+
 (03/09/09)
 *** Added a throttling parallelFor and changed the swift foreach underlying
     implementation to it. The throttling parallelFor limits the number of
