fix bug 165: wrapper.sh and seq.sh are given more obscure names to reduce conflicts when users want to make their own files called wrapper.sh or seq.sh
git-svn-id: https://svn.ci.uchicago.edu/svn/vdl2/trunk@2747 e2bb083e-7f23-0410-b3a8-8253ac9ef6d8

--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -1,3 +1,9 @@
+(03/27/09)
+*** The wrapper.sh and seq.sh scripts that are deployed to remote sites to
+    help with execution have been renamed to more Swift specific names, to
+    avoid collision with user-supplied files of the same name. The new names
+    are _swiftwrap and _swiftseq
+
 (03/15/09)
 *** The log-processing code, primarily exposed as the swift-plot-log command,
     has been merged into the main Swift release, rather than being a separate
